Pull up following revision(s) (requested by wiz in ticket #464): 	sys/net/if_types.h: revision 1.26 Avoid ambiguity by having only one comment close mark. PR 46771 by bsiegert.