sys/net/if_types.h
@@ -1,4 +1,4 @@
-/*	$NetBSD: if_types.h,v 1.25 2006/05/18 09:05:51 liamjfoy Exp $	*/
+/*	$NetBSD: if_types.h,v 1.25.104.1 2012/08/08 15:35:14 martin Exp $	*/
 
 /*
  * Copyright (c) 1989, 1993, 1994
@@ -249,7 +249,7 @@
 #define IFT_DOCSCABLEUPSTREAMCHANNEL 0xcd /* CATV Upstream Channel */
 #define IFT_ECONET		   0xce /* Acorn Econet */
 #define IFT_PON155		   0xcf /* FSAN 155Mb Symetrical PON interface */
-#define IFT_PON622		   0xd0 /* FSAN 622Mb Symetrical PON interface */*/
+#define IFT_PON622		   0xd0 /* FSAN 622Mb Symetrical PON interface */
 #define IFT_BRIDGE		   0xd1 /* Transparent bridge interface */
 #define IFT_LINEGROUP		   0xd2 /* Interface common to multiple lines */
 #define IFT_VOICEEMFGD		   0xd3 /* voice E&M Feature Group D */
